--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <link rel="stylesheet" type="text/css" href="./css/index.css"/>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    We are using node <script>document.write(process.versions.node)</script>,
-    Chrome <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
+    <div class="login-div" id="login">
+      <label for="user">User:</label>
+      <input type="text" name="user"><br>
+      <label for="password">Password:</label>
+      <input type="text" name="password"><br>
+    </div>
   </body>
 </html>
